cmake_minimum_required(VERSION 3.16)
project(liubobo)

set(CMAKE_CXX_STANDARD 14)

add_executable(liubobo binarySearch.cpp)
add_executable(twoSum twoSum.cpp)
add_executable(binarySearch binarySearch.cpp)
add_executable(threeSum threeSum.cpp)
add_executable(fourSum fourSum.cpp)
add_executable(fiveSum fiveSum.cpp)